--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 # Prerequisites
 *.d
 
+# Binaries
+triangle
+
 # Compiled Object files
 *.slo
 *.lo
 *.o
 *.obj
+*.spv
 
 # Precompiled Headers
 *.gch
